objects/project_cloud__Project_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Content10__c</fullName>
        <label>Content 10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Content1__c</fullName>
        <label>Content 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Content2__c</fullName>
        <label>Content 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project that this snapshot was taken of</description>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Project Snapshots</relationshipLabel>
        <relationshipName>Project_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Version__c</fullName>
        <description>The snapshot version</description>
        <label>Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Project Snapshot</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Project Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>